lab3 is finished

--- a/Lab1Web/appsettings.json
+++ b/Lab1Web/appsettings.json
@@ -2,8 +2,25 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DataBaseConfiguration": {
+    "MaxAttaching": 5,
+    "ApiMode": "full_access",
+    "StudentConfiguration": {
+      "ApiMode": "full_access",
+      "MaxAttaching": 5
+    },
+    "CourseConfiguration": {
+      "ApiMode": "full_access",
+      "MaxAttaching": 5
+    },
+    "InstructorConfiguration": {
+      "ApiMode": "full_access",
+      "MaxAttaching": 5
+    }
+  }
 }
